# ai4dlab-ckan

./: .gitignore  README.md  dump.rdb  requirements.in
contrib/cookiecutter/ckan_extension/ckanext-ai4dLab/: MANIFEST.in  README.md  setup.cfg
contrib/cookiecutter/ckan_extension/ckanext-ai4dLab/.github/workflows/: test.yml
contrib/cookiecutter/ckan_extension/ckanext-ai4dLab/ckanext/ai4dlab/: cli.py  helpers.py  plugin.py  views.py
contrib/cookiecutter/ckan_extension/ckanext-ai4dLab/ckanext/ai4dlab/assets/: script.js  webassets.yml
contrib/cookiecutter/ckan_extension/ckanext-ai4dLab/ckanext/ai4dlab/logic/: action.py  auth.py  schema.py  validators.py
contrib/cookiecutter/ckan_extension/ckanext-ai4dLab/ckanext/ai4dlab/tests/: test_helpers.py  test_plugin.py  test_views.py
contrib/cookiecutter/ckan_extension/ckanext-ai4dLab/ckanext/ai4dlab/tests/logic/: test_action.py  test_auth.py  test_validators.py
