[metadata]
name = ckanext-ai4dLab
version = 0.0.1
description = theme for ai4dLab data repository
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ombenitango/ckanext-ai4dLab
author = Ombeni Tango
author_email = ombenitango14@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN Extension for ai4dLab

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             ai4dlab = ckanext.ai4dlab.plugin:Ai4DlabPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/ai4dlab/i18n/ckanext-ai4dlab.pot
width = 80

[init_catalog]
domain = ckanext-ai4dlab
input_file = ckanext/ai4dlab/i18n/ckanext-ai4dlab.pot
output_dir = ckanext/ai4dlab/i18n

[update_catalog]
domain = ckanext-ai4dlab
input_file = ckanext/ai4dlab/i18n/ckanext-ai4dlab.pot
output_dir = ckanext/ai4dlab/i18n
previous = true

[compile_catalog]
domain = ckanext-ai4dlab
directory = ckanext/ai4dlab/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
